# migration-pg-nosql

./: .env.exemple  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/: IDH2010.csv
src/: load_csv_to_postgres.py  main.py  migrate_pg_to_mongo.py
